Fix shifting content problem

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -10,7 +10,6 @@ body {
   &.no-scroll {
     .wrapper {
       overflow: hidden;
-      padding-right: 17px;
       height: 100vh;
     }
   }
