--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -13,7 +13,7 @@
 
 .menu-slide__box-container {
   opacity: 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: -100%;
   display: flex;
