--- a/src/scss/pages/_single-page.scss
+++ b/src/scss/pages/_single-page.scss
@@ -32,6 +32,7 @@
 .page {
   img.size-full {
     width: 100%;
+    height: auto;
   }
 }
 @media(max-width: 1200px) {
